[tool.poetry]
name = "ProgressTracker"
version = "0.1.0"
description = "Um aplicativo web Python construído com Flask, utilizando Google Cloud Firestore como banco de dados e Gunicorn como servidor WSGI."
authors = ["Doctrina"]

[tool.poetry.dependencies]
python = "^3.11" # Ou sua versão do Python
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
google-cloud-firestore = "^2.15.0" # Use a versão que precisa
google-auth = "^2.20.0" # Use a versão que precisa
click = "^8.1.8"
sift-stack-py = "^0.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"